--- a/src/widget/battery/style.scss
+++ b/src/widget/battery/style.scss
@@ -2,7 +2,10 @@
 
 .tile--battery {
     border-radius: 18px;
-    padding: 6px;
+}
+
+.battery__content {
+    margin: tokens.$space-sm;
 }
 
 .battery__cells {
